Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24552

enums are not acceptable in signals connected using Connections

    XMLWordPrintable

Details

    Description

      If I have a signal with some enums as a parameter, it works fine if I directly connect it in QML. But the enum can't be recognized if the signal is connected using Connections element, and complaining e.g.: QMetaProperty::read: Unable to handle unregistered datatype 'ChargingState' for property 'QDeclarativeBoundSignalParameters::state'

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            xizzhu Xizhi Zhu (Steven)
            xizzhu Xizhi Zhu (Steven)
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes