Add a work-around for QTBUG-24552.

In short, for signals with enums as the parameters, the enums can not
be recognized if the signals are connected using Connections element.

This commit should be reverted once QTBUG-24552 gets fixed.

Change-Id: Ibc08cca4c8796817625a8c2fed22988d897817d0
Reviewed-by: Yang Li <yang.12.li@nokia.com>
Reviewed-by: Xizhi Zhu <xizhi.zhu@nokia.com>